--- a/ConfigEditor/ConfigEditor/MainWindow.xaml
+++ b/ConfigEditor/ConfigEditor/MainWindow.xaml
@@ -31,7 +31,8 @@
                 <Separator />
                 <!--<Button Content="Run NotePad"		Margin="10,0,10,0"	Click="OnNotePadClick"		ToolTip="Save List Config"  />-->
             </ToolBar>
-
+            <Label x:Name="m_lbProject" Content="Project"    Width="120" Margin="471,0,629,0" Foreground="#FFB6B6B6" FontWeight="Bold" FontSize="14"></Label>
+            <Label x:Name="m_lbPath" Content="Path"       Width="360" Margin="648,0,452,0" Foreground="#FFB6B6B6" FontWeight="Bold" FontSize="14"></Label>
         </Grid>
         <Grid Grid.Row="1">
             <SHEET:APSSheet  x:Name="m_spreadUtility" ColumnCount="10" SpreadZoomUse="False" SpreadVerScollUse="True" SpreadScrollUse="True" SpreadHorScrollUse="True" _Header="GRAY" _Style="CIM_GRAY" 
