--- a/ConfigEditor/ConfigEditor/MainWindow.xaml
+++ b/ConfigEditor/ConfigEditor/MainWindow.xaml
@@ -5,9 +5,10 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:ConfigEditor"
         xmlns:Icon ="clr-namespace:APS.ICON;assembly=APS.ICON"
-		xmlns:SHEET="clr-namespace:APS.WPF.SHEET;assembly=APS.WPF.SHEET" x:Class="ConfigEditor.MainWindow"
+		xmlns:SHEET="clr-namespace:APS.WPF.SHEET;assembly=APS.WPF.SHEET" 
+    x:Class="ConfigEditor.MainWindow"
 		mc:Ignorable="d"
-		Title="MainWindow" Height="950" Width="1200" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" MouseDown="UIWindowMouseDown" Background="#FF2C4169" KeyDown="OnKeyDown">
+		Title="MainWindow" Height="950" Width="1200" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None"  Background="#FF2C4169" KeyDown="OnKeyDown">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"></RowDefinition>
@@ -16,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" KeyDown="OnKeyDown">
-            <ToolBar     ClipToBounds="False" Margin="10,5,5,5" Padding="0" Width="400" HorizontalAlignment="Left">
+            <ToolBar   MouseDown="UIWindowMouseDown"  ClipToBounds="False" Margin="10,5,5,5" Padding="0" Width="400" HorizontalAlignment="Left">
                 <Button x:Name="m_btnSelect" Content="Select"	Margin="10,0,10,0"	Click="OnSelectClick"	ToolTip="Select Project Config" />
                 <Separator />
                 <Menu x:Name="m_menuEdit" Background="Transparent" >
@@ -29,17 +30,22 @@
                 <Separator />
                 <Button x:Name="m_btnSave" Content="Save"		Margin="10,0,10,0"	Click="OnSaveClick"		ToolTip="Save List Config"  />
                 <Separator />
+                <Button x:Name="m_btnUp" Content="Up"		Margin="10,0,10,0"	Click="OnBtnMoveClick"		ToolTip="Save List Config"  />
+                <Separator />
+                <Button x:Name="m_btnDown" Content="Down"		Margin="10,0,10,0"	Click="OnBtnMoveClick"		ToolTip="Save List Config"  />
+                <Separator />
                 <!--<Button Content="Run NotePad"		Margin="10,0,10,0"	Click="OnNotePadClick"		ToolTip="Save List Config"  />-->
             </ToolBar>
             <Label x:Name="m_lbProject" Content="Project"     Padding="3" Margin="471,3,624,3" Foreground="#FFB6B6B6" FontWeight="Bold" FontSize="14" BorderBrush="#FFB6B6B6" BorderThickness="1"       ></Label>
             <Label x:Name="m_lbPath" Content="Path"           Padding="3" Margin="648,3,189,3" Foreground="#FFB6B6B6" FontWeight="Bold" FontSize="14" BorderBrush="#FFB6B6B6" BorderThickness="1"   MouseDoubleClick="OnOpenFolder"></Label>
         </Grid>
         <Grid Grid.Row="1">
-            <SHEET:APSSheet  x:Name="m_spreadUtility" ColumnCount="10" SpreadZoomUse="False" SpreadVerScollUse="True" SpreadScrollUse="True" SpreadHorScrollUse="True" _Header="GRAY" _Style="CIM_GRAY" 
-							 ColumnHeader_0="SVID" ColumnHeader_1="Name" ColumnHeader_2="Format" ColumnHeader_3="Type" ColumnHeader_4="Unit" ColumnHeader_5="Range" ColumnHeader_6="Dot" ColumnHeader_7="Signed" ColumnHeader_8="Local" ColumnHeader_9="Button" 
-							 ColumnWidth_1="280" ColumnWidth_5="140" SelectionMode="Cell"
-							 Margin="10" Grid.ColumnSpan="2"
-                             />
+            <DockPanel>
+
+                <SHEET:APSSheet  x:Name="m_spreadUtility" _Header="WHITE" _Style="CIM_WHITE" SpreadZoomUse="False" SpreadVerScollUse="True" SpreadScrollUse="True" SpreadHorScrollUse="False"  
+                             SelectionMode="Range"   Margin="10" SpreadReadOnly="False" VerBorderLinelUse="True" MinRowHeight="30" ColumnCount="10" SheetTabVisible="False"  >
+                </SHEET:APSSheet>
+            </DockPanel>
         </Grid>
 
 
